--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
+    "multer": "^2.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
